z-index fixes

--- a/src/css/root.css
+++ b/src/css/root.css
@@ -20,7 +20,7 @@ body {
     height: 70px;
     line-height: 50px;
     display: flex;
-    z-index: 2;
+    z-index: 3;
     top: 0;
     left: 0;
     background-color: #292929;
